--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -19,6 +19,8 @@
     }
    },
    "source": [
+    "**Part of the DL-CV-Workshop**: https://github.com/risc-mi/dl-cv-workshop\n",
+    "\n",
     "Loosely based on https://www.kaggle.com/dejavu23/mnist-sklearn-and-keras"
    ]
   },
@@ -108,7 +110,7 @@
     "* `numpy` is *the* Python library for efficiently working with (numerical) arrays; note that images are represented as such arrays\n",
     "* `matplotlib` is a popular plotting library for displaying images and visualizing results\n",
     "* `sklearn` (aka scikit-learn) is *the* general-purpose library for \"classical\" (non-deep-learning) ML in Python; contains lots of useful functions, some of which we are going to use here\n",
-    "* `torch` corresponds to PyTorch, our deep learning framework\n",
+    "* `torch` is PyTorch, our deep learning framework\n",
     "  * provides `numpy`-like interface to numerical arrays called *tensors*, which in addition to actual values also record gradient information when applying operations to them\n",
     "  * gradient information can be used to automatically differentiate complicated functions and thereby solve the optimization problems encountered when training neural networks\n",
     "  * furthermore, seamlessly integrates CUDA for running computations on GPU (not used here)"
@@ -392,7 +394,7 @@
     }
    },
    "source": [
-    "Let's build a simple *convolutional neural network* (CNN). CNNs constitute the state-of-the-art neural network architecture for image processing. They include *convolution layers*, which apply an affine-linear transformation to all patches of a given size of their input (image). The parameters of the linear transformation (i.e., entries of the corresponding matrix) are learned by training."
+    "Let's build a simple *convolutional neural network* (CNN). CNNs constitute the state-of-the-art neural network architecture for image processing (although [Vision Transformers](https://en.wikipedia.org/wiki/Vision_transformer) become increasingly popular). They consist of *convolution layers*, which apply an affine-linear transformation to all patches of a given size of their input (image). The parameters of the linear transformation (i.e., entries of the corresponding matrix) are learned by training **and are identical for every patch**."
    ]
   },
   {
@@ -1078,7 +1080,7 @@
     "   * If only few data are available, more data-efficient splitting strategies exist as well, e.g., $k$-fold cross validation.\n",
     "4. Define a suitable neural network architecture.\n",
     "   * \"Suitable\" depends a lot on the specific use-case.\n",
-    "   * Convolutional neural networks still represent the state-of-the-art in computer vision.\n",
+    "   * Convolutional neural networks, and recently Vision Transformers, still represent the state-of-the-art in computer vision.\n",
     "5. Train the model on the training set.\n",
     "   * Use the validation set to monitor the training progress and detect overfitting.\n",
     "   * Consider employing data augmentation to artificially increase the training set.\n",
@@ -1112,7 +1114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
